--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR ANSWER HERE"
+    "Format 3 because it will allow you to search by each column variables and still get all the data for that record."
    ]
   },
   {
@@ -51,7 +51,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR ANSWER HERE"
+    "Theater Name --> Phone Number,\n",
+    "Theater Location --> Phone Number,\n",
+    "Movie Name --> Actor, Director"
    ]
   },
   {
@@ -67,7 +69,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR ANSWER HERE"
+    "THEATER_INFO(TheaterName, TheaterLocation, Phone Number, MovieTitle)\n",
+    "MOVIE_INFO(MovieTitle, Rating, Actor, Director)\n",
+    "TIMES(MovieTitle, TheaterName, Time)"
    ]
   },
   {
@@ -152,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
